colocando as pastas CSV dentro do gitignore

--- a/entrega - IA/.gitignore
+++ b/entrega - IA/.gitignore
@@ -1,4 +1,4 @@
 .env
 
-Pseudonimização dos dados pessoais\tabelas\Usuário\CSV
-Pseudonimização dos dados pessoais\tabelas\SuperAdm\CSV
+Pseudonimização dos dados pessoais\tabelas\Usuário\CSV/** 
+Pseudonimização dos dados pessoais\tabelas\SuperAdm\CSV**
