Colocando as imagens, e os CSV dentro do git ignore.

--- a/entrega - IA/.gitignore
+++ b/entrega - IA/.gitignore
@@ -2,3 +2,6 @@
 
 Pseudonimização dos dados pessoais\tabelas\Usuário\CSV/** 
 Pseudonimização dos dados pessoais\tabelas\SuperAdm\CSV**
+
+entrega - IA\Pseudonimização dos dados pessoais\tabelas\SuperAdm\ImagemBanco/**
+entrega - IA\Pseudonimização dos dados pessoais\tabelas\Usuário\ImagemBanco/**
