--- a/entrega - IA/.gitignore
+++ b/entrega - IA/.gitignore
@@ -1,7 +1,6 @@
+# Arquivo de ambiente
 .env
 
-Pseudonimização dos dados pessoais\tabelas\Usuário\CSV/** 
-Pseudonimização dos dados pessoais\tabelas\SuperAdm\CSV**
-
-entrega - IA\Pseudonimização dos dados pessoais\tabelas\SuperAdm\ImagemBanco/**
-entrega - IA\Pseudonimização dos dados pessoais\tabelas\Usuário\ImagemBanco/**
+# Ignorar as pastas de dados e imagens
+**/CSV/**
+**/imagemBanco/**
